--- a/src/main/resources/com/kildeen/sys/index.html
+++ b/src/main/resources/com/kildeen/sys/index.html
@@ -19,12 +19,16 @@
 <html>
 <head><title>Undertow Chat</title>
 <script>
+    var latestMsg;
     var socket;
     if (window.WebSocket) {
         socket = new WebSocket("ws://localhost:8080/myapp");
         socket.onmessage = function (event) {
             var chat = document.getElementById('chat');
             chat.innerHTML = chat.innerHTML + event.data + "<br />";
+            latestMsg = JSON.parse(event.data);
+            cleanUpOptions();
+            createNewOptions();
         };
     } else {
         alert("Your browser does not support Websockets. (Use Chrome)");
@@ -41,6 +45,26 @@
         }
         return false;
     }
+
+    function cleanUpOptions() {
+        const optionsParent = document.getElementById("options");
+        while (optionsParent.firstChild) {
+            optionsParent.removeChild(optionsParent.firstChild);
+        }
+    }
+    function createNewOptions() {
+
+        const optionsParent = document.getElementById("options");
+        for (let prop in latestMsg.plotEvent.options) {
+            const btn = document.createElement("BUTTON");
+            btn.innerText = latestMsg.childOptionsToChildOptionText[latestMsg.plotEvent.options[prop]]
+            btn.onclick = function() {
+                send(latestMsg.plotEvent.options[prop]);
+            }
+            optionsParent.appendChild(btn);
+        }
+    }
+
 </script>
 <style type="text/css">
     html,body {width:100%;height:100%;}
@@ -97,6 +121,13 @@
             <label for="msg">Message</label>
             <input type="text" name="message" id="msg"  onkeypress="if(event.keyCode==13) { send(this.form.message.value); this.value='' } " />
         </form>
+    </div>
+    <div id="options">
+
+
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
     </div>
 </div>
 </body>
