--- a/src/main/resources/com/kildeen/sys/index.html
+++ b/src/main/resources/com/kildeen/sys/index.html
@@ -1,134 +1,65 @@
-<!--
-  ~ JBoss, Home of Professional Open Source.
-  ~ Copyright 2014 Red Hat, Inc., and individual contributors
-  ~ as indicated by the @author tags.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  -->
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<html>
-<head><title>Undertow Chat</title>
-<script>
-    var latestMsg;
-    var socket;
-    if (window.WebSocket) {
-        socket = new WebSocket("ws://localhost:8080/myapp");
-        socket.onmessage = function (event) {
-            var chat = document.getElementById('chat');
-            chat.innerHTML = chat.innerHTML + event.data + "<br />";
-            latestMsg = JSON.parse(event.data);
-            cleanUpOptions();
-            createNewOptions();
-        };
-    } else {
-        alert("Your browser does not support Websockets. (Use Chrome)");
-    }
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/main.js"></script>
 
-    function send(message) {
-        if (!window.WebSocket) {
-            return false;
-        }
-        if (socket.readyState == WebSocket.OPEN) {
-            socket.send(message);
-        } else {
-            alert("The socket is not open.");
-        }
-        return false;
-    }
+    </head>
+    <body>
 
-    function cleanUpOptions() {
-        const optionsParent = document.getElementById("options");
-        while (optionsParent.firstChild) {
-            optionsParent.removeChild(optionsParent.firstChild);
-        }
-    }
-    function createNewOptions() {
-
-        const optionsParent = document.getElementById("options");
-        for (let prop in latestMsg.plotEvent.options) {
-            const btn = document.createElement("BUTTON");
-            btn.innerText = latestMsg.childOptionsToChildOptionText[latestMsg.plotEvent.options[prop]]
-            btn.onclick = function() {
-                send(latestMsg.plotEvent.options[prop]);
-            }
-            optionsParent.appendChild(btn);
-        }
-    }
-
-</script>
-<style type="text/css">
-    html,body {width:100%;height:100%;}
-    html,body,ul,ol,dl,li,dt,dd,p,blockquote,fieldset,legend,img,form,h1,h2,h3,h4,h5,h6 {margin:0;padding:0;}
-    body {
-        font:normal 12px/1.5 Arial,Helvetica,'Bitstream Vera Sans',sans-serif;
-        background: #c5deea; /* Old browsers */
-        background: -moz-linear-gradient(top, #c5deea 0%, #066dab 100%); /* FF3.6+ */
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #c5deea), color-stop(100%, #066dab)); /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top, #c5deea 0%, #066dab 100%); /* Chrome10+,Safari5.1+ */
-        background: -o-linear-gradient(top, #c5deea 0%, #066dab 100%); /* Opera 11.10+ */
-        background: -ms-linear-gradient(top, #c5deea 0%, #066dab 100%); /* IE10+ */
-        background: linear-gradient(to bottom, #c5deea 0%, #066dab 100%); /* W3C */
-        height: 90%;
-    }
-
-    .center {
-        margin-left: auto;
-        margin-right: auto;
-        width: 70%;
-        background: white;
-    }
-
-    .chatform {
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 0;
-        width: 70%;
-    }
-    form{
-        width: 100%;
-    }
-    label{
-        display: inline;
-        width: 100px;
-    }
-    #msg{
-        display: inline;
-        width: 100%;
-    }
-
-</style>
-</head>
-<body>
-<div class="page">
-    <div class="center" >
-        <h1>Web Socket Chat</h1>
-        <div id="chat" style="height:100%;width: 100%; overflow: scroll;">
-
-
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">h1.title</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">nav ul li a</a></li>
+                    </ul>
+                </nav>
+            </header>
         </div>
 
-        <form onsubmit="return false;" class="chatform" action="">
-            <label for="msg">Message</label>
-            <input type="text" name="message" id="msg"  onkeypress="if(event.keyCode==13) { send(this.form.message.value); this.value='' } " />
-        </form>
-    </div>
-    <div id="options">
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+                <div  style="height:100%;width: 100%; overflow: scroll;">
 
+                <article>
+                    <header>
+                        <h1 id="currentPlotEvent">article header h1</h1>
+                    </header>
+                    <section id="chat">
 
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    </div>
-</div>
-</body>
+                    </section>
+
+                    <footer id="options">
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                    </footer>
+                </article>
+
+                <aside>
+                    <h3>aside</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
+                </aside>
+
+            </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                <h3>footer</h3>
+            </footer>
+        </div>
+
+        <script src="js/main.js"></script>
+    </body>
 </html>
