--- a/src/main/resources/com/kildeen/sys/index.html
+++ b/src/main/resources/com/kildeen/sys/index.html
@@ -14,28 +14,16 @@
     </head>
     <body>
 
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">h1.title</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </div>
 
-        <div class="main-container">
+
+        <div class="main-container" >
             <div class="main wrapper clearfix">
-                <div  style="height:100%;width: 100%; overflow: scroll;">
 
-                <article>
+                <article class="paper">
                     <header>
                         <h1 id="currentPlotEvent">article header h1</h1>
                     </header>
-                    <section id="chat">
+                    <section id="plotEventText" >
 
                     </section>
 
@@ -46,19 +34,10 @@
                     </footer>
                 </article>
 
-                <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
 
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
-
-        <div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
-            </footer>
+            </div>
         </div>
+
 
         <script src="js/main.js"></script>
     </body>
